tests/test_assets/semantic/invalid/strings/invalid_escape.cog
// semantic error at line 2: invalid escape sequence '\x' in string literal
// 1 semantic error generated.

test::() -> void {
    value: u8[3] = "a\x";
}