tests/test_assets/semantic/invalid/strings/invalid_escape.expected
semantic error at line 5: invalid escape sequence '\x' in string literal
1 semantic error generated.
